// Copyright 2019-2020 Enseada authors
//
// This Source Code Form is subject to the terms of the Mozilla Public
// License, v. 2.0. If a copy of the MPL was not distributed with this
// file, You can obtain one at https://mozilla.org/MPL/2.0/.

syntax = "proto3";

package auth.v1beta1;

option csharp_namespace = "Auth.V1Beta1";
option go_package = "authv1beta1";
option java_multiple_files = true;
option java_outer_classname = "AclApiProto";
option java_package = "io.enseada.auth.v1beta1";
option objc_class_prefix = "AXX";
option php_namespace = "Auth\\V1Beta1";

import "auth/v1beta1/acl_permission.proto";

// RPC API to manage ACL and policies.
service AclAPI {
  // List all available ACL permissions.
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse);
  // Add a new ACL permissions.
  rpc AddPermission(AddPermissionRequest) returns (AddPermissionResponse);
  // Delete an ACL permissions.
  rpc DeletePermission(DeletePermissionRequest) returns (DeletePermissionResponse);
}

// Request body to list all available ACL permissions.
message ListPermissionsRequest {}

// Response body with a list of all available ACL permissions.
message ListPermissionsResponse {
  repeated auth.v1beta1.AclPermission permissions = 1;
}

// Request body to add a new ACL permission.
message AddPermissionRequest {
  // The permission to add. Required.
  auth.v1beta1.AclPermission permission = 1;
}

// Response body with the newly added ACL permission.
message AddPermissionResponse {
  auth.v1beta1.AclPermission permission = 1;
}

// Request body to delete an ACL permission.
message DeletePermissionRequest {
  // The permission to delete. Required.
  auth.v1beta1.AclPermission permission = 1;
}

// Response body with the deleted ACL permission.
message DeletePermissionResponse {
  auth.v1beta1.AclPermission permission = 1;
}
